Adapted position relative at contact and projects for lying behind fixed nav

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -5,7 +5,7 @@
 section {
   @include dFlex();
   flex-direction: column;
-  position: relative;
+  // position: relative;
   width: 100%;
   max-width: 1440px;
   padding-bottom: 180px;
